--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header></header>
     <main>
-        <div id="logo">HangmanZ</div>
-        <div id="welcome" onclick="startGame()">PLAY</div>
+        <div id="main-logo">HangmanZ</div>
+        <div id="main-welcome" onclick="startGame()">PLAY</div>
         <div id="main-game">
             <div id="game-header" class="game-section">test header</div>
             <div id="game-figure" class="game-section">0</div>
