--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman</title>
+    <title>HangmanZ</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="scripts/script.js"></script>
 </head>
@@ -25,8 +25,8 @@
         <div>(C) 2023 - HangmanZ</div>
         <div id="contact-icons"></div>
         <div id="terms">
-            <div>Terms of use</div>
-            <div>Privacy policy</div>
+            <div><div class="class-terms">Terms of use</div></div>
+            <div><div class="class-terms">Privacy policy</div></div>
         </div>
         <div>Made with love by lucon</div>
     </footer>
