--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div id="game-figure" class="game-section">0</div>
             <div id="game-giveup" class="game-section game-option">Give up</div>
             <div id="game-hint" class="game-section game-option">Hint</div>
+            <div id="game-replay" class="game-section game-option">Play again</div>
             <div id="game-info" class="game-section">
                 <div>Wrong letters: </div>
                 <div id="game-wrongs"></div>
