--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <span>|</span>
             <span id="language-fr" class="language-option">fr</span>
         </div>
+        <div id="main-lost">
+            You lost!
+        </div>
         <div id="main-logo">HangmanZ</div>
         <div id="main-welcome" class="menu" onclick="selectGame()">PLAY</div>
         <div id="main-menu" class="menu">
