Working hangman stick figure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
                     <span id="game-settings">⚙</span>
                 </div>
             </div>
-            <div id="game-figure" class="game-section">0</div>
+            <div id="game-figure-wrapper" class="game-section">
+                <div id="game-figure">
+                    <div id="game-figure-pole-h" class="frame"></div>
+                    <div id="game-figure-pole-v" class="frame"></div>
+                    <div id="game-figure-rope" class="frame">.</div>
+                    <div id="game-figure-head" class="part game-figure-part">.</div>
+                    <div id="game-figure-torso" class="part">.</div>
+                    <div id="game-figure-leftarm" class="part left-stick">.</div>
+                    <div id="game-figure-rightarm" class="part right-stick">.</div>
+                    <div id="game-figure-leftleg" class="part left-stick">.</div>
+                    <div id="game-figure-rightleg" class="part right-stick">.</div>
+                </div>
+            </div>
             <div id="game-giveup" class="game-section game-option">Give up</div>
             <div id="game-hint" class="game-section game-option">Hint</div>
             <div id="game-replay" class="game-section game-option">Play again</div>
