--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
                     <div id="game-figure-rightleg" class="part right-stick">.</div>
                 </div>
             </div>
-            <div id="game-giveup" class="game-section game-option">Give up</div>
-            <div id="game-hint" class="game-section game-option">Hint</div>
-            <div id="game-replay" class="game-section game-option">Play again</div>
+            <div id="game-decisions">
+                <div id="game-giveup" class="game-section game-option option-left">Give up</div>
+                <div id="game-hint" class="game-section game-option option-right">Hint</div>
+                <div id="game-replay" class="game-section game-option option-left">Play again</div>
+                <div id="game-back" class="game-section game-option option-right">Main menu</div>
+            </div>
             <div id="game-info" class="game-section">
                 <div>Wrong letters: </div>
                 <div id="game-wrongs"></div>
