--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <div id="game-figure">
                     <div id="game-figure-pole-h" class="frame"></div>
                     <div id="game-figure-pole-v" class="frame"></div>
+                    <div id="game-figure-pole-base" class="frame"></div>
                     <div id="game-figure-rope" class="frame">.</div>
                     <div id="game-figure-head" class="part game-figure-part">.</div>
                     <div id="game-figure-torso" class="part">.</div>
