--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="custom-option">Hints</div>
                 <div class="custom-option">Sound</div>
             </div>
-            <div id="menu-start" onclick="startGame()">Start</div>
+            <div id="menu-start" onclick="startGame()">START</div>
         </div>
         <div id="main-game">
             <div id="game-header" class="game-section">
@@ -71,9 +71,19 @@
                 <div id="game-back" class="game-section game-option option-right">Main menu</div>
             </div>
             <div id="game-info" class="game-section">
-                <div>Wrong letters: </div>
-                <div id="game-wrongs"></div>
-                <span id="game-header-status"></span>
+                <div id="game-info-wrongs">
+                    <div id="game-info-wrongs-message">Wrong guesses: </div>
+                    <div id="game-info-wrongs-list"></div>
+                </div>
+                <div id="game-info-attempts">
+                    <div>Remaining attempts: </div>
+                    <div id="game-info-attempts-amount">6</div>
+                </div>
+                <div id="game-info-hints">
+                    <div>Hints given: </div>
+                    <div id="game-info-hints-amount">0</div>
+                </div>
+                <div id="game-info-status"></div>
             </div>
             <div id="game-attempts" class="game-section"></div>
         </div>
